<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/ll_all"
    android:layout_height="match_parent"
  >
    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:background="@color/hand_blue"
        android:layout_height="@dimen/head_w">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@mipmap/title_back"
                />
            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="返回"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_para_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="添加车辆"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:layout_below="@+id/rl_head"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@color/bg_light_gray"
            />

        <LinearLayout
            android:id="@+id/ll_select_company"
            style="@style/paddingRL12dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                style="@style/input_text_title"
                android:text="@string/company_name"/>

            <TextView
                android:id="@+id/et_select_company"
                style="@style/EditorStyle"
                android:hint="@string/select_company_name"
                android:layout_weight="1"
                android:background="@drawable/sel_bg_white_gray"
                />
            <ImageView
                android:id="@+id/iv_company_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/screen_arrow"

                />

        </LinearLayout>

        <View
            style="@style/line_tol12_fill_r"></View>


        <LinearLayout
            style="@style/paddingRL12dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                style="@style/input_text_title"
                android:text="@string/device_number"
                />

            <EditText
                android:id="@+id/et_device_number"
                style="@style/EditorStyle"
                android:hint="@string/input_device_number"
                android:inputType="number"
                />
        </LinearLayout>

        <View
            style="@style/line_tol12_fill_r"></View>


        <LinearLayout
            style="@style/paddingRL12dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                style="@style/input_text_title"
                android:text="@string/truck_number"
                />

            <TextView
                android:id="@+id/tv_truck_number"
                style="@style/EditorStyle"
                android:hint="@string/input_truck_number"
                />
        </LinearLayout>

        <View
            style="@style/line_tol12_fill_r"></View>
    </LinearLayout>


    <Button
        android:id="@+id/btn_add_truck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_round_corner"
        android:text="添加"
        android:textColor="@color/bg_white"
        android:textSize="16sp"

        />
    <include
        android:id="@+id/dialog_truckN_input"
        layout="@layout/dialog_weight_input"
        android:visibility="gone"
        ></include>
</RelativeLayout>
