<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#b0000000"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/bg_white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hint"
            android:textColor="@color/black"
            android:textSize="22sp"

            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_real_weight"
            android:textColor="@color/black"
            android:textSize="22sp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp"
            >
            <EditText
                android:id="@+id/et_input_weight"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/layout_bg_white"
                android:gravity="center"
                android:textColor="@color/hand_blue_dark"
                android:textSize="22sp"
                android:inputType="numberDecimal"
                />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/search_delete"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:visibility="invisible"
                />
        </RelativeLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"


            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure"
                android:textSize="22sp"
                android:background="@drawable/sel_bg_white_gray"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                ></View>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="22sp"
                android:background="@drawable/sel_bg_white_gray"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
